--- a/Netflix.css
+++ b/Netflix.css
@@ -556,5 +556,6 @@ font-family: Arial, Helvetica, sans-serif;
 #last>article>.box3{
     /* background-color: green; */
     line-height: 38px;
+    color: white;	
 }
 
